--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://i.ibb.co/DthpYjT/logo.jpg"
+      href="/logo.jpeg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RHR-Tech</title>
+    <title>Tech-Shop</title>
   </head>
   <body>
     <div id="root"></div>
